# gen/http/order/server/paths.go
@@ -1,0 +1,13 @@
+// Code generated by goa v3.22.1, DO NOT EDIT.
+//
+// HTTP request path constructors for the order service.
+//
+// Command:
+// $ goa gen stock-bot/design
+
+package server
+
+// NewOrderOrderPath returns the URL path to the order service newOrder HTTP endpoint.
+func NewOrderOrderPath() string {
+	return "/orders"
+}
